--- a/index.html
+++ b/index.html
@@ -2,13 +2,6 @@
 <html lang="es">
 
 <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P3M5JBR');</script>
-<!-- End Google Tag Manager -->
 	
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,20 +14,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </head>
 
 <body onclick="">
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P3M5JBR"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
     <main>
         <!-- PROVISIONAL -->
         <h1 class="miguel">MIGUEL<span class="valera">VALERA</span> </h1>
 
         <nav class="rrss">
             <a id="linkedin" href="https://www.linkedin.com/in/migvaler/" class="rrss__link" target="_blank">Linkedin </a>|
-            <a id="instagram" href="https://www.instagram.com/ux_mike/" class="rrss__link" target="_blank">Instagram </a>|
+            <a id="instagram" href="https://www.instagram.com/migvaler/" class="rrss__link" target="_blank">Instagram </a>|
             <a id="behance" href="https://www.behance.net/migvaler/" class="rrss__link" target="_blank">Behance </a>|
-            <a id="github" href="https://github.com/migvalera" class="rrss__link" target="_blank">Github </a>|
-			<a id="github" href="https://uxart.es" class="rrss__link" target="_blank">Blog</a>
+            <a id="twitter" href="https://www.twitter.com/migvaler" class="rrss__link" target="_blank">Github </a>|
+			<a id="blog" href="https://migvaler.medium.com/" class="rrss__link" target="_blank">Blog</a>
         </nav>
 
     </main>
