--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
         <nav class="rrss">
             <a id="linkedin" href="https://www.linkedin.com/in/migvaler/" class="rrss__link" target="_blank">Linkedin </a>|
+		            <a id="behance" href="https://www.behance.net/migvaler/" class="rrss__link" target="_blank">Behance </a>|
             <a id="instagram" href="https://www.instagram.com/migvaler/" class="rrss__link" target="_blank">Instagram </a>|
-            <a id="behance" href="https://www.behance.net/migvaler/" class="rrss__link" target="_blank">Behance </a>|
-            <a id="twitter" href="https://www.twitter.com/migvaler" class="rrss__link" target="_blank">Github </a>|
-			<a id="blog" href="https://migvaler.medium.com/" class="rrss__link" target="_blank">Blog</a>
+            <a id="twitter" href="https://www.twitter.com/migvaler" class="rrss__link" target="_blank">Twitter </a>|
+			<a id="blog" href="https://migvaler.medium.com/" class="rrss__link" target="_blank">Medium</a>
         </nav>
 
     </main>
