--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<a id="blog" href="https://migvaler.medium.com/" class="rrss__link" target="_blank">Medium</a>|
 		            <a id="behance" href="https://www.behance.net/migvaler/" class="rrss__link" target="_blank">Behance </a>|
             <a id="instagram" href="https://www.instagram.com/migvaler/" class="rrss__link" target="_blank">Instagram </a>|
+		<a id="vimeo" href="https://www.vimeo.com/migvaler" class="rrss__link" target="_blank">Vimeo </a>|
             <a id="twitter" href="https://www.twitter.com/migvaler" class="rrss__link" target="_blank">Twitter </a>
         </nav>
     </main>
