--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <!-- PROVISIONAL -->
         <h1 class="miguel">MIGUEL<span class="valera">VALERA</span> </h1>
         <nav class="rrss">
-            <a id="linkedin" href="https://www.linkedin.com/in/migvaler/" class="rrss__link" target="_blank">Linkedin </a>|
+		<a id="behance" href="https://www.behance.net/migvaler/" class="rrss__link" target="_blank">Behance </a>|
+		<a id="instagram" href="https://www.instagram.com/migvaler/" class="rrss__link" target="_blank">Instagram </a>|
+                <a id="linkedin" href="https://www.linkedin.com/in/migvaler/" class="rrss__link" target="_blank">Linkedin </a>|
 		<a id="blog" href="https://migvaler.medium.com/" class="rrss__link" target="_blank">Medium </a>|
-		            <a id="behance" href="https://www.behance.net/migvaler/" class="rrss__link" target="_blank">Behance </a>|
-            <a id="instagram" href="https://www.instagram.com/migvaler/" class="rrss__link" target="_blank">Instagram </a>|
-		<a id="vimeo" href="https://www.vimeo.com/migvaler" class="rrss__link" target="_blank">Vimeo </a>|
-            <a id="twitter" href="https://www.twitter.com/migvaler" class="rrss__link" target="_blank">Twitter </a>
+		<a id="twitter" href="https://www.twitter.com/migvaler" class="rrss__link" target="_blank">Twitter </a>|
+            	<a id="vimeo" href="https://www.vimeo.com/migvaler" class="rrss__link" target="_blank">Vimeo </a>
         </nav>
     </main>
 </body>
