--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/png" href="imgs/FavMiguelValera.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;700;900&display=swap" rel="stylesheet">
-    <title> Miguel Valera | Diseño UX/UI </title>
+    <title> Miguel Valera | UX Designer </title>
 </head>
 
 <body onclick="">
